Added price total to the checkout and in the kitchen service. Also added an allergy system